solve globals scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,10 @@
 }
 
 :root {
-  
   --primary: #e5e7eb;
-  --secondary: #2967FF;
-  --tertiary: #2967FF;
+  --secondary: #2967ff;
+  --tertiary: #2967ff;
 }
-
 
 ::-webkit-scrollbar {
   width: 12px;
@@ -31,13 +29,12 @@
   background: var(--primary);
   border-radius: 5px;
   border: 1px solid #cacaca;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--secondary);
   border-radius: 8px;
-
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -46,9 +43,8 @@
 
 .scrollbar::-webkit-scrollbar {
   width: 10px;
-
 }
 
 .scrollbar::-webkit-scrollbar-thumb {
   background-color: gray;
-} */
+}
